Fix footer appearance on “short” pages
Page that doesn’t render enough content makes the
footer look weird/broken. This change should help.

--- a/src/components/Frame/Page/page.pcss
+++ b/src/components/Frame/Page/page.pcss
@@ -2,6 +2,7 @@
 
 .pageInner {
     background: white;
+    min-height: 100vh;
     position: relative;
     z-index: 1;
 }
